# playground

x12-rust/: .gitignore  Cargo.toml  message_schemas.json  sample_message.txt
x12-rust/src/: main.rs
