[package]
name = "x12-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
dashmap = { version = "4.0.2", features = ["serde"] }